Reorganize folders with files

--- a/index.html
+++ b/index.html
@@ -138,62 +138,62 @@
                         <div class="project__wrapper">
                             <div class="project__nszu project__content">
                                 <div class="project__img">
-                                    <a href="each-projects-page/01_nszu/nszu.html"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
-                                    <a href="each-projects-page/01_nszu/nszu.html"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/nszu.html"><img src="assets/pic/01_nszu/front-nszu.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/nszu.html"><img src="assets/pic/01_nszu/front-nszu-bw.jpg" class="project__photo"></a>
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="each-projects-page/01_nszu/nszu.html"><p class="project__text"> National Health Service of Ukraine </p></a>
+                                    <a href="projects/nszu.html"><p class="project__text"> National Health Service of Ukraine </p></a>
                                 </div>
                             </div>
                             <div class="project__leleka project__content">
                                 <div class="project__img">
-                                    <a href="each-projects-page/02_leleka/leleka.html"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
-                                    <a href="each-projects-page/02_leleka/leleka.html"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/leleka.html"><img src="assets/pic/02_leleka/front-leleka.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/leleka.html"><img src="assets/pic/02_leleka/front-leleka-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="each-projects-page/02_leleka/leleka.html"><p class="project__text"> Maternity Hospital "Leleka"  </p></a>
+                                    <a href="projects/leleka.html"><p class="project__text"> Maternity Hospital "Leleka"  </p></a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
                                 <div class="project__img">
-                                    <a href="each-projects-page/03_aquapark/aquapark.html"><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
-                                    <a href="each-projects-page/03_aquapark/aquapark.html"><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/aquapark.html"><img src="assets/pic/03_aquapark/front-quapark.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/aquapark.html"><img src="assets/pic/03_aquapark/front-aquapark-bw.jpg" class="project__photo"></a>
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="each-projects-page/03_aquapark/aquapark.html"><p class="project__text"> Aquapark in Mukachevo </p></a>
+                                    <a href="projects/aquapark.html"><p class="project__text"> Aquapark in Mukachevo </p></a>
                                 </div>
                             </div>
                             <div class="project__brovary project__content">
                                 <div class="project__img">
-                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
-                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/school-brovary.html"><img src="assets/pic/04_school/front-school.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/school-brovary.html"><img src="assets/pic/04_school/front-school-bw.jpg" class="project__photo"></a>
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="each-projects-page/04_school-brovary/school-brovary.html"><p class="project__text"> Primary school in Brovary </p></a>
+                                    <a href="projects/school-brovary.html"><p class="project__text"> Primary school in Brovary </p></a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
                                 <div class="project__img">
-                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
-                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/nova-kakhovka.html"><img src="assets/pic/05_nova_kakhovka/front-cnap-bw.jpg" class="project__photo"></a>
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="each-projects-page/05_nova-kakhovka/nova-kakhovka.html"><p class="project__text"> Center of Government Services </p></a>
+                                    <a href="projects/nova-kakhovka.html"><p class="project__text"> Center of Government Services </p></a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
                                 <div class="project__img">
-                                    <a href="each-projects-page/06_zirochka/kindergarten-zirochka.html"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
-                                    <a href="each-projects-page/06_zirochka/kindergarten-zirochka.html"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
+                                    <a href="projects/kindergarten-zirochka.html"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka.jpg" class="project__photo-hover"></a>
+                                    <a href="projects/kindergarten-zirochka.html"><img src="assets/pic/06_kindergarten_zirochka/front-zirochka-bw.jpg" class="project__photo"></a>
                                 </div>    
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="each-projects-page/06_zirochka/kindergarten-zirochka.html"><p class="project__text"> Kindergarten "Zyrochka" </p></a>
+                                    <a href="projects/kindergarten-zirochka.html"><p class="project__text"> Kindergarten "Zyrochka" </p></a>
                                 </div>
                             </div>
                         </div>
@@ -310,7 +310,7 @@
                                             <!-- <p class="input-error"> Provide a message</p>  -->
                                             <div class="input-error message-error"></div>                    
                                         </div> 
-                                        <p class="error-hiden">This field is required</p>
+                                        <p class="error-hiden">Please, complete all fields</p>
                                         <button type="submit" class="contacts__submit"> Submit </button>
                                         <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms </p>
                                     </form>                   
