Fixed menu burger in warning page

--- a/projects/warning.html
+++ b/projects/warning.html
@@ -95,5 +95,6 @@
             </div>
         </section>
     </main> 
+    <script src="../assets/js/burger.js" ></script> <!-- Import Burger menu --> 
 </body>
 </html>
