Changed projects name

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/nszu.html"><p class="project__text"> National Health Service of Ukraine </p></a>
+                                    <a href="projects/nszu.html" class="project__text"> National Health Service of Ukraine, Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__leleka project__content">
@@ -120,7 +120,7 @@
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/leleka.html"><p class="project__text"> Maternity Hospital "Leleka"  </p></a>
+                                    <a href="projects/leleka.html" class="project__text"> Maternity home "Leleka", Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
@@ -130,7 +130,7 @@
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/aquapark.html"><p class="project__text"> Aquapark in Mukachevo </p></a>
+                                    <a href="projects/aquapark.html" class="project__text"> Aquapark "Karpatia", Mukachevo </a>
                                 </div>
                             </div>
                             <div class="project__brovary project__content">
@@ -140,7 +140,7 @@
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/school-brovary.html"><p class="project__text"> Primary school in Brovary </p></a>
+                                    <a href="projects/school-brovary.html" class="project__text"> Primary school, Brovary </a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
@@ -150,7 +150,7 @@
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/nova-kakhovka.html"><p class="project__text"> Center of Government Services </p></a>
+                                    <a href="projects/nova-kakhovka.html" class="project__text"> Center of Government Services, Nova-Kakhovka </a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
@@ -160,7 +160,7 @@
                                 </div>    
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/kindergarten-zirochka.html"><p class="project__text"> Kindergarten "Zyrochka" </p></a>
+                                    <a href="projects/kindergarten-zirochka.html" class="project__text"> Kindergarten "Zyrochka", Brovary </a>
                                 </div>
                             </div>
                         </div>
@@ -175,24 +175,24 @@
                             <div class="section-wrapper achievements" >
                                 <div class="achievements__wrapper">
                                     <div class="achievements__block">
-                                        <p class="number"> 96 </p>
-                                        <p class="text">Clients</p>
+                                        <p class="number"> 96 
+                                        <p class="text">Clients
                                     </div>
                                     <div class="achievements__block">
-                                        <p class="number"> 28 </p>
-                                        <p class="text">Partners</p>
+                                        <p class="number"> 28 
+                                        <p class="text">Partners
                                     </div>
                                     <div class="achievements__block">
-                                        <p class="number"> 260 </p>
-                                        <p class="text">Projects</p>
+                                        <p class="number"> 260 
+                                        <p class="text">Projects
                                     </div>
                                     <div class="achievements__block">
-                                        <p class="number"> 14 </p>
-                                        <p class="text">Years</p>
+                                        <p class="number"> 14 
+                                        <p class="text">Years
                                     </div>
                                     <div class="achievements__block">
-                                        <p class="number"> 7 </p>
-                                        <p class="text">Awards</p>
+                                        <p class="number"> 7 
+                                        <p class="text">Awards
                                     </div>
                                 </div>                        
                             </div>
@@ -200,43 +200,43 @@
                         <div class="about-us__container"> 
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/AK1.jpg" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Anna Kyrii </p>
-                                <p class="emp-block__position"> Owner </p>
+                                <p class="emp-block__name"> Anna Kyrii 
+                                <p class="emp-block__position"> Owner 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/MS1.jpg" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Maryna Savchuk </p>
-                                <p class="emp-block__position"> CEO </p>
+                                <p class="emp-block__name"> Maryna Savchuk 
+                                <p class="emp-block__position"> CEO 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/AG1.JPG" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Alina Grigoryan </p>
-                                <p class="emp-block__position"> Chief Architect </p>
+                                <p class="emp-block__name"> Alina Grigoryan 
+                                <p class="emp-block__position"> Chief Architect 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/MF1.jpg" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Maxym Fakas </p>
-                                <p class="emp-block__position"> Architect </p>
+                                <p class="emp-block__name"> Maxym Fakas 
+                                <p class="emp-block__position"> Architect 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/TK1.jpg" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Tetiana Kozak </p>
-                                <p class="emp-block__position"> Architect </p>
+                                <p class="emp-block__name"> Tetiana Kozak 
+                                <p class="emp-block__position"> Architect 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/KB1.jpg" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Kateryna Bondarenko </p>
-                                <p class="emp-block__position"> Architect </p>
+                                <p class="emp-block__name"> Kateryna Bondarenko 
+                                <p class="emp-block__position"> Architect 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/VS1.jpg" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Viacheslav Sukhinov </p>
-                                <p class="emp-block__position"> Architect </p>
+                                <p class="emp-block__name"> Viacheslav Sukhinov 
+                                <p class="emp-block__position"> Architect 
                             </div>
                             <div class="emp-block">
                                 <img src="assets/pic/00_general/team/SL1.jpg" alt="" class="emp-block__photo">
-                                <p class="emp-block__name"> Shatalina Lidia </p>
-                                <p class="emp-block__position"> Account Manager </p>
+                                <p class="emp-block__name"> Shatalina Lidia 
+                                <p class="emp-block__position"> Account Manager 
                             </div>
                         </div>
                         <div class="project__more-projects more-btn">
@@ -249,29 +249,29 @@
                         <div class="contacts__container">
                             <div class="contacts__what-we-do">
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Consulting on any issues </p>
-                                    <p class="additional-text"> related to the process of design and development of architectural objects </p>
+                                    <p class="main-text"> Consulting on any issues 
+                                    <p class="additional-text"> related to the process of design and development of architectural objects 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Development of concepts </p>
-                                    <p class="additional-text"> with the analysis of limit parameters of building and risk-map </p>
+                                    <p class="main-text"> Development of concepts 
+                                    <p class="additional-text"> with the analysis of limit parameters of building and risk-map 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Project documentation </p>
-                                    <p class="additional-text"> Finding the best architectural and engineering solutions for the task</p>
+                                    <p class="main-text"> Project documentation 
+                                    <p class="additional-text"> Finding the best architectural and engineering solutions for the task
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Project documentation </p>
-                                    <p class="additional-text"> Pre-project, Schematic Design, Project, Work Project and Working Documentation </p>
+                                    <p class="main-text"> Project documentation 
+                                    <p class="additional-text"> Pre-project, Schematic Design, Project, Work Project and Working Documentation 
                                 </div>
                                 <div class="contacts__what-we-do-text">
-                                    <p class="main-text"> Author's supervision of construction </p>
+                                    <p class="main-text"> Author's supervision of construction 
                                 </div>
                             </div>
                             <div class="contacts__place-a-meeting">
                                 <div class="contacts__place-a-meeting-container">                    
                                     <form action="#" id="contacts__form" class="contacts__form">
-                                        <p class="contacts__cotact-us-title"> Contact us </p>
+                                        <p class="contacts__cotact-us-title"> Contact us 
                                         <div class="contacts__input-block">
                                             <label for="inp-name" class="input-label"> Name* </label>
                                             <input id="inp-name" type="text" name="name" placeholder="Provide your name" class="input-field _req _name">
@@ -291,9 +291,9 @@
                                             <textarea id="inp-message" name="message" placeholder="Provide your message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
                                             <div class="input-error message-error"></div>                    
                                         </div> 
-                                        <p class="error-hiden">Please, complete all fields</p>
+                                        <p class="error-hiden">Please, complete all fields
                                         <button type="submit" class="contacts__submit"> Submit </button>
-                                        <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms </p>
+                                        <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms 
                                     </form>                   
                                 </div>             
                             </div>
@@ -310,13 +310,13 @@
         <div class="page__container">
             <div class="footer__contact-info">
                 <div class="contacts">
-                    <p><a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a></p>
-                    <p ><a href="mailto:in@kyrii-group.com.ua" class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</a></p>
-                    <p><a href="tel:+38-098-778-9013" class="contacts__details contacts__tel">tel: +38 (044) 486 35 36</a></p>
+                    <p><a href="https://www.google.com/maps/place/%D0%90%D1%80%D1%85%D0%B8%D1%82%D0%B5%D0%BA%D1%82%D1%83%D1%80%D0%BD%D0%BE-%D0%BF%D1%80%D0%BE%D0%B5%D0%BA%D1%82%D0%BD%D0%B0%D1%8F+%D0%B3%D1%80%D1%83%D0%BF%D0%BF%D0%B0+%D0%90%D0%BD%D0%BD%D1%8B+%D0%9A%D0%B8%D1%80%D0%B8%D0%B9/@50.4484759,30.497488,17z/data=!4m13!1m7!3m6!1s0x40d4cef54bbbd095:0x6af66acf0bb8b5a4!2z0LLRg9C70LjRhtGPINCe0LvQtdGB0Y8g0JPQvtC90YfQsNGA0LAsIDgyLCDQmtC40ZfQsiwgMDIwMDA!3b1!8m2!3d50.4484355!4d30.4971632!3m4!1s0x40d4cef54be8e5cf:0x181e795e2e17cacc!8m2!3d50.4484289!4d30.4973407" class="contacts__details contacts__adress" id="contacts__adress" target="_blank">Of. 2-A, 82, O.Gonchara Str., <br> 01054, Kyiv, Ukraine</a>
+                    <p ><a href="mailto:in@kyrii-group.com.ua" class="contacts__details contacts__e-mail">in@kyrii-group.com.ua</a>
+                    <p><a href="tel:+38-098-778-9013" class="contacts__details contacts__tel">tel: +38 (044) 486 35 36</a>
                 </div>
                 <div class="privacy-policy">
                     <img src="assets/pic/00_general/logo_black.svg" class="privacy-policy__logo">
-                    <p class="privacy-policy__text" style="text-align: center;"> Privacy Policy </p>
+                    <p class="privacy-policy__text" style="text-align: center;"> Privacy Policy 
                 </div>
             </div>  
         </div>      
