--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                 </div>                                
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/nszu.html"><p class="project__text"> National Health Service of Ukraine </p></a>
+                                    <a href="projects/nszu.html" class="project__text"> National Health Service of Ukraine, Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__leleka project__content">
@@ -153,7 +153,7 @@
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/leleka.html"><p class="project__text"> Maternity Hospital "Leleka"  </p></a>
+                                    <a href="projects/leleka.html" class="project__text"> Maternity home "Leleka", Kyiv </a>
                                 </div>
                             </div>
                             <div class="project__aquapark project__content">
@@ -163,7 +163,7 @@
                                 </div>  
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/aquapark.html"><p class="project__text"> Aquapark in Mukachevo </p></a>
+                                    <a href="projects/aquapark.html" class="project__text"> Aquapark "Karpatia", Mukachevo </a>
                                 </div>
                             </div>
                             <div class="project__brovary project__content">
@@ -173,7 +173,7 @@
                                 </div>   
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/school-brovary.html"><p class="project__text"> Primary school in Brovary </p></a>
+                                    <a href="projects/school-brovary.html" class="project__text"> Primary school, Brovary </a>
                                 </div>
                             </div>
                             <div class="project__nova-kakhovka project__content">
@@ -183,7 +183,7 @@
                                 </div> 
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/nova-kakhovka.html"><p class="project__text"> Center of Government Services </p></a>
+                                    <a href="projects/nova-kakhovka.html" class="project__text"> Center of Government Services, Nova-Kakhovka </a>
                                 </div>
                             </div>
                             <div class="project__zirochka project__content">
@@ -193,7 +193,7 @@
                                 </div>    
                                 <div class="project__content-wrapper">
                                     <img src="assets/pic/00_general/projects-bg.jpg" class="project__photo-hiden">
-                                    <a href="projects/kindergarten-zirochka.html"><p class="project__text"> Kindergarten "Zyrochka" </p></a>
+                                    <a href="projects/kindergarten-zirochka.html" class="project__text"> Kindergarten "Zyrochka", Brovary </a>
                                 </div>
                             </div>
                         </div>
