Fixed Contact us form deleted inputs

--- a/contacts.html
+++ b/contacts.html
@@ -115,6 +115,7 @@
                                         </div> 
                                         <div class="contacts__input-block">
                                             <label for="inp-phone" class="input-label"> Phone Number* </label>
+                                            <input id="inp-phone" type="text" name="phone" placeholder="Provide your phone number" class="input-field _req _phone"> 
                                             <div class="input-error phone-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
@@ -130,7 +131,7 @@
                                         <p class="error-hiden">Please, complete all fields</p>
                                         <button type="submit" class="contacts__submit"> Submit </button>
                                         <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms </p>
-                                    </form>                   
+                                    </form>                    
                                 </div>             
                             </div>
                         </div>
