--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                             <div class="contacts__place-a-meeting">
                                 <div class="contacts__place-a-meeting-container">                    
                                     <form action="#" id="contacts__form" class="contacts__form">
-                                        <p class="contacts__cotact-us-title"> Contact us 
+                                        <p class="contacts__cotact-us-title"> Contact us </p>
                                         <div class="contacts__input-block">
                                             <label for="inp-name" class="input-label"> Name* </label>
                                             <input id="inp-name" type="text" name="name" placeholder="Provide your name" class="input-field _req _name">
@@ -279,6 +279,7 @@
                                         </div> 
                                         <div class="contacts__input-block">
                                             <label for="inp-phone" class="input-label"> Phone Number* </label>
+                                            <input id="inp-phone" type="text" name="phone" placeholder="Provide your phone number" class="input-field _req _phone"> 
                                             <div class="input-error phone-error"></div>
                                         </div> 
                                         <div class="contacts__input-block">
@@ -291,10 +292,10 @@
                                             <textarea id="inp-message" name="message" placeholder="Provide your message" class="input-field _req" rows="9" style="height: 144px;"></textarea>  
                                             <div class="input-error message-error"></div>                    
                                         </div> 
-                                        <p class="error-hiden">Please, complete all fields
+                                        <p class="error-hiden">Please, complete all fields</p>
                                         <button type="submit" class="contacts__submit"> Submit </button>
-                                        <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms 
-                                    </form>                   
+                                        <p class="contacts__cotact-us-PP"> By pressing the submit button you agree with the privacy policy terms </p>
+                                    </form>                    
                                 </div>             
                             </div>
                         </div>
